test/Parser/range-types.src
// V %srcc --parse --verify %s
program test;

range<int>;
range int>; // expected-error: Expected '<' after 'range'
range<int; // expected-error: Expected '>'
range<i32[]>;
range<int,int>; // expected-error: Expected '>'
range; // expected-error (Expected '<' after 'range') expected-error (Expected type)
range i8; // expected-error (Expected '<' after 'range') expected-error (Expected '>')
range i32[]; // expected-error (Expected '<' after 'range') expected-error (Expected '>')
